docs: Modify the initial README.md file